# lojinha-kivymd

./: README.md  app.py  main.kv  main.py  mycard.py  pyproject.toml
