[tool.poetry]
name = "live_kivymd"
version = "0.1.0"
description = ""
authors = ["dunossauro <mendesxeduardo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
kivymd = "^0.104.1"
Faker = "^5.0.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.4"
isort = "^5.6.4"
black = "^20.8b1"
pylava = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
